@@ -1,5 +1,9 @@
 2009-11-27  ebin <yutaka@ebine.org>
 
+	* sabel/session/*: sessionパッケージ改修。
+
+2009-11-27  ebin <yutaka@ebine.org>
+
 	* sabel/functions/core.php: get_server_name()関数追加。environment()関数の削
 	除。それに関わる箇所の変更。lib/Cache.php作り直し。
 
